<resources>
    <string name="app_name">ayedis_project</string>
    <string name="Login">Log In</string>
    <string name="signup">Don\'t have an Account? <b>Sign Up</b></string>
    <string name="Signup">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to on board -->
    <string name="onboard1">Big Sale</string>
    <string name="onboard2">Special Bonus</string>
    <string name="onboard3">Non Stop with You</string>
    <string name="onboard4">Everywhere Everytime</string>

    <string name="description1">If you broke, we got BIG SALE for you</string>
    <string name="description2">You\'re special, so you deserve something special</string>
    <string name="description3">We\'ll always be with you for 24 hours</string>
    <string name="description4">We\'ll follow you everywhere you go and everytime you need</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
