...
            android:fontFamily="@font/lato_light"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/slideTwoNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:text="@string/next"
...
